# VillaEcommerceSdk

./: .gitignore  Package.resolved  Package.swift  README.md  amplify.yml
.cursor/rules/: folder-structure.mdc
.cursor/rules/docs/: folder-structure.mdc
.cursor/rules/javascript/: coding-standards.mdc
.cursor/rules/python/: coding-standards.mdc
.cursor/rules/swift/: coding-standards.mdc
.github/workflows/: deploy-demo.yml  deploy-s3-cache.yml  publish.yml
Sources/VillaEcommerceSdk/: ApiKey.swift  VillaApi.swift  VillaEcommerceSdk.swift
Tests/VillaEcommerceSdkTests/: ApiKeyTest.swift  VillaEcommerceSdkTests.swift  testSignedHeader.swift
demo/: .cursorrules  .gitignore  README.md  amplify.yml  amplify_outputs.json  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
demo/amplify/: backend.ts  package.json  tsconfig.json
demo/amplify/auth/: resource.ts
demo/src/: App.tsx  index.css  main.tsx
docs/: build_static.py  serve_docs.py
docs/api/: python.md
docs/aws-setup/: AWS_IAM_SETUP.md  AWS_SETUP.md  DEBUG.md  QUICK_SETUP.md  README.md  SETUP.md  TROUBLESHOOTING.md  fix-oidc-trust.sh  fix-trust-permissive.sh  setup-aws-iam-user.sh  setup-aws-oidc.sh  use-existing-role.sh  verify-oidc-setup.sh
docs/guides/: python-getting-started.md
python/: .coverage  DEPLOY.md  LICENSE  MANUAL.md  QUICK_START.md  QUICK_START_GUIDE.md  README.md  S3_SETUP.md  pyproject.toml  requirements.txt  samconfig.toml  template.yaml
python/examples/: base_class_example.py  payment_example.py
python/src/villa_ecommerce_sdk/: __init__.py  base.py  cache.py  client.py  inventory.py  payments.py  products.py
python/tests/: __init__.py  test_cache.py  test_client.py  test_integration.py  test_inventory.py  test_products.py
(+12 files in other folders)
